--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "shower": "git://github.com/operatino/core",
+    "shower-video": "git://github.com/operatino/shower-video#v0.0.2",
     "shower-ok": "git://github.com/operatino/shower-ok-invert#v0.1.0"
   },
   "author": "Robert Haritonov",
