Updating shower-ok-invert theme

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "shower-core": "git://github.com/operatino/core",
     "shower-video": "git://github.com/operatino/shower-video#v0.0.2",
-    "shower-ok-invert": "git://github.com/operatino/shower-ok-invert#v0.1.0"
+    "shower-ok-invert": "git://github.com/operatino/shower-ok-invert"
   },
   "author": "Robert Haritonov",
   "readmeFilename": "README.md"
